# zidian_engine

./: CMakeLists.txt  README.md
assets/: test.txt
assets/shaders/: primitive.vert.spv
include/: application.h  config.h  const.h  zidian.h
include/renderer/: canvas.h  draw.h  render.h  vk_canvas.h
include/renderer/batch/: primitive_batch.h
include/renderer/buffer/: gpu_buffer.h  vertex_buffer.h
include/renderer/command/: command_list.h  primitive_command.h
include/renderer/mem/: allocation.h  device_memory.h  memory_allocator.h
include/renderer/pipeline/: pipeline_manager.h  primitive_pipe.h
include/renderer/shader/: shader_manager.h
include/renderer/vertex/: primitive_vertex.h
include/resource/: asset_manager.h
include/utils/: format.h  json.h  log.h  string_util.h  time.h
include/widget/: random.h  task_schedule.h  thread_pool.h
sandbox/: main.cpp  test_application.cpp  test_log.cpp
shaders/: frag.glsl  primitive.frag  primitive.vert  vert.glsl
src/: application.cpp  config.cpp  zidian.cpp
src/renderer/: canvas.cpp  draw.cpp  render.cpp  vk_canvas.cpp
src/renderer/batch/: primitive_batch.cpp
src/renderer/buffer/: gpu_buffer.cpp
src/renderer/command/: command_list.cpp
src/renderer/mem/: device_memory.cpp  memory_allocator.cpp
src/renderer/pipeline/: pipeline_manager.cpp  primitive_pipe.cpp
src/resource/: asset_manager.cpp
src/shader/: shader_manager.cpp
src/utils/: format.cpp  json.cpp  log.cpp  string_util.cpp  time.cpp
src/widget/: random.cpp  task_schedule.cpp  thread_pool.cpp
